tests/script_errors/function_error_1/error.txt
Error: 
    2 | record::from_array(7)
      | ^^^^^^^^^^^^^^^^^^^^^ Bad type passed to function record::from_array/1